Update fix forum overlaps

--- a/frontEnd/src/components/comments/Comment.scss
+++ b/frontEnd/src/components/comments/Comment.scss
@@ -1,5 +1,12 @@
 @use "../../scss/" as *;
 
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .comments-container{
   display: flex;
   flex-direction: column;
@@ -11,7 +18,7 @@
 .content-wrapper {
   display: flex;
   justify-content: center;
-  width: 1600px;
+  width: 900px;
 
   @media screen and (max-width: 600px) {
     width: 100%;
@@ -22,7 +29,7 @@
 
 .comments {
   display: flex;
-  width: 60%;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -52,10 +59,10 @@
   justify-content: flex-start;
   width: 100%;
 
-  &__title {
-    font-size: large;
-    font-weight: 500;
-  }
+  // &__title {
+  //   font-size: large;
+  //   font-weight: 500;
+  // }
 
 }
 
@@ -69,6 +76,8 @@
   background-color: transparent;
   color: $white;
   margin-top: 1.2rem;
+  border-radius: 5px;
+  margin: 0 0.5rem 0 0;
 
 
   &:hover {
@@ -77,14 +86,16 @@
     transition: ease-in-out 0.1s;
     cursor: pointer;
   }
+  
 }
 
 .comment-form-textarea {
+  font-size: 1rem;
   width: 100%;
   height: 10rem;
   border-radius: 5px;
   padding: 1rem;
-  margin-top: 1rem;
+  margin: 0.5rem 0 0.5rem 0;
 }
 
 .comments-form {
@@ -119,6 +130,14 @@
     border: 1px solid #777777;
     transition: ease-in-out 0.1s;
   }
+
+  // @media screen and (max-width: 600px) {
+  //   width: 100%;
+  // }
+    
+  
+
+
 }
 
 .user-info{
@@ -150,7 +169,7 @@
   display: flex;
   flex-direction: row-reverse;
   width: 100%;
-  padding: 1rem;
+  padding: 0.5rem;
 }
 
 .comment-action{
@@ -158,11 +177,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #333333;
+  border-radius: 5px;
   width: 100px;
 
   &:hover{
-    background-color: $white;
+    background-color: #ececec;
     color: $black;
     transition: ease-in-out 0.1s;
     cursor: pointer;
@@ -176,7 +195,7 @@
   padding: 2rem 1rem;
   align-content: flex-start;
   border-radius: 5px;
-  border: 1px solid #545454;
+  background-color: #333333;
 
 }
 
